Adds library dependencies for LiquidCrystal_I2C

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,8 @@ platform = espressif32
 board = lolin_d32
 framework = arduino
 monitor_speed = 115200
+
+lib_deps =
+  # RECOMMENDED
+  # Accept new functionality in a backwards compatible manner and patches
+  marcoschwartz/LiquidCrystal_I2C @ ^1.1.4
